eks/ezbookkeeping-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ezbookkeeping
  namespace: ezbookkeeping

spec:
  type: ClusterIP

  selector:
    app: ezbookkeeping

  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
