eks/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: ezbookkeeping

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
  - name: postgres
    protocol: TCP
    port: 5432
    targetPort: 5432
